# awsp

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT.md  Makefile  README.md  config
.github/workflows/: test.yaml
CHANGELOG/: CHANGELOG-0.1.0.md  README.md
src/: cmdline.rs  config.rs  file.rs  lib.rs  main.rs  selector.rs
src/file/: config.rs  credential.rs
src/file/credential/: aws_profile_credential.rs
src/file/helper/: line.rs
src/helper/: file.rs
src/helper/file/: config.rs  credential.rs
src/helper/file/credential/: aws_profile_credential.rs
tests/sample-data/: credential_process_config
