[package]
name = "awsp"
version = "0.0.1-beta"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dialoguer = "0.8.0"
dirs = "3.0.2"
log = "0.4.14"
regex = "1.5.4"
rusoto_credential = "0.47.0"
structopt = "0.3.22"
sysinfo = "0.19.2"

[profile.release]
opt-level = 'z'  # Optimize for size.
lto = true
